<?xml version="1.0" encoding="utf-8"?>
<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
    android:description="@string/widget_storage_description"
    android:initialLayout="@layout/widget_storage"
    android:minWidth="180dp"
    android:minHeight="60dp"
    android:resizeMode="horizontal"
    android:targetCellWidth="3"
    android:targetCellHeight="1"
    android:updatePeriodMillis="1800000"
    android:widgetCategory="home_screen" />
